[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Themes_v2/MAIN_MENU/Menu_SaveLoad.tres" type="Theme" id=1]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/images/gui/inventory/item_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/inventory/item_frame_chose.png" type="Texture" id=4]
[ext_resource path="res://assets/images/portraits/daisy_prt.png" type="Texture" id=5]
[ext_resource path="res://src/scenes/SaveLoadPanel.gd" type="Script" id=6]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Icons/icon_trashcan_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Icons/icon_trashcan_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Icons/icon_trashcan.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/Textures_v2/MAIN_MENU/Panels/frame_load.png" type="Texture" id=11]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_20_normal.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=13]

[node name="saveloadpanel" type="Panel"]
margin_right = 650.0
margin_bottom = 774.0
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 17.0
margin_top = 285.0
margin_right = 586.0
margin_bottom = 631.0
size_flags_vertical = 3
theme = ExtResource( 13 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 3

[node name="Button" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 590.0
margin_bottom = 51.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 23.0
margin_top = 9.0
margin_right = 340.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.941176, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "LSPSAVENAME"

[node name="Date" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 340.0
margin_top = 8.0
margin_right = 522.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "LSPSAVENAME"
align = 2

[node name="Delete" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 546.0
margin_top = 5.0
margin_right = 586.0
margin_bottom = 46.2509
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Delete"
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 52.0
margin_top = 700.0
margin_right = 585.0
margin_bottom = 741.057
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
placeholder_text = "LSPSAVENAME"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsPanel" type="Panel" parent="."]
margin_top = 89.0
margin_right = 643.0
margin_bottom = 246.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DetailsPanel"]
margin_left = 17.0
margin_top = 5.0
margin_right = 252.0
margin_bottom = 145.0
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="DetailsPanel"]
margin_left = 252.0
margin_top = 5.0
margin_right = 473.0
margin_bottom = 145.0
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterIcon" type="TextureRect" parent="DetailsPanel"]
margin_left = 489.491
margin_top = 14.5639
margin_right = 610.491
margin_bottom = 135.564
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DetailsPanel/MasterIcon"]
margin_left = -10.6558
margin_top = -7.41267
margin_right = 129.344
margin_bottom = 132.587
texture = ExtResource( 11 )

[node name="Update" type="Button" parent="."]
visible = false
margin_left = 272.075
margin_top = 20.0476
margin_right = 393.912
margin_bottom = 48.2985
text = "LSPUPDATESAVEFILE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdatePanel" type="Panel" parent="."]
visible = false
margin_left = 650.0
margin_right = 1300.0
margin_bottom = 774.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UpdatePanel"]
margin_left = 22.0
margin_top = 285.0
margin_right = 612.0
margin_bottom = 741.0

[node name="Button" type="TextureButton" parent="UpdatePanel/VBoxContainer"]
visible = false
margin_right = 590.0
margin_bottom = 51.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="UpdatePanel/VBoxContainer/Button"]
margin_left = 23.0
margin_top = 9.0
margin_right = 340.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.941176, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Savename"

[node name="Date" type="Label" parent="UpdatePanel/VBoxContainer/Button"]
margin_left = 340.0
margin_top = 8.0
margin_right = 522.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Savename"
align = 2

[node name="Update" type="Button" parent="UpdatePanel/VBoxContainer/Button"]
margin_left = 546.0
margin_top = 5.0
margin_right = 586.0
margin_bottom = 46.2509
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Delete"
text = "Update"

[node name="ImportMode" type="CheckButton" parent="."]
margin_left = 49.0
margin_top = 649.0
margin_right = 342.0
margin_bottom = 695.251
hint_tooltip = "LSIMPORTTOOLTIP"
custom_colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 10 )
shortcut_in_tooltip = false
text = "LSPIMPORTMODE"

[connection signal="pressed" from="ImportMode" to="." method="_on_ImportMode_pressed"]
